<resources>
    <string name="app_name">Smart Co-working Booking</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loginWithGoogle">"Sign in with Google"</string>
    <string name="signup">"Sign up"</string>

    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="coming_up_reserve">Coming up bookings</string>
    <string name="home">Home</string>
    <string name="new_booking">New bookings</string>
    <string name="joining">Joining</string>
    <string name="more">More...</string>

    <string name="coe_coworking">CoE Co-Working Space, 5th floor</string>
    <string name="date">1 February 2020, 18.00 - 20.00</string>
    <string name="tableNo10">Table 10</string>
    <string name="four_people">4 people</string>

    <string name="booking_description">Booking description</string>
    <string name="qr_scan_description">Please scan QR code on your reserved table before 15 minutes or your reservation would be canceled</string>
    <string name="qr_scan">Scan QR Code to confirm your booking</string>
    <string name="mapView">View on map</string>
    <string name="cancelBooking">Cancel bookings</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username is invalid</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Reserve">"Reserve"</string>

    <string name="HomePage">Home</string>
    <string name="CoE_CoS">CoE Co-working Space</string>
    <string name="Free_Table_Status">Free 4 Table</string>
    <string name="All_space">All space</string>
    <string name="Table">Table 1</string>
    <string name="People">0/4 people</string>
    <string name="Resever">Reserve</string>
    <string name="Join">Join</string>

    <string name="choose_hour_prompt">Select amount of hours</string>
    <string name="nowBooking">nowBooking</string>
    <string-array name="hours_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="sign_out">Sign out</string>
</resources>
